src/diagrams/state/snapshots/figo__diagrams__state__tests__fork_fsm_unicode.snap
---
source: src/diagrams/state/mod.rs
expression: out
---
                                      ╭────────────╮
                                ●────>│    Idle    │
                                      ╰────────────╯
                                      go_a   │  go_b
                                   ┌─────────┬─────────┐
                                   │                   │
                            ╭──────▼─────╮      ╭──────▼─────╮
                            │     A      │      │╭──────────╮│
                            ╰────────────╯      ││    B     ││
                                                │╰──────────╯│
                                                ╰────────────╯
