src/diagrams/state/snapshots/figo__diagrams__state__tests__overlapping_labels_unicode.snap
---
source: src/diagrams/state/mod.rs
expression: out
---
                                                          ╭────────────╮
                                                    ●───very_long_label_one
                                                          ╰────────────╯
                                                                 │
                                                                 │
                                                        very_long_label_two
                                                          ╭──────▼─────╮
                                                          │     B      │
                                                          ╰────────────╯
                                                                 │
                                                                 │
                                                                 │
                                                          ╭──────▼─────╮
                                                          │     C      │
                                                          ╰────────────╯
                                                       very_long_label_three
                                                                 │
                                                                 │
                                                          ╭──────▼─────╮
                                                          │╭──────────╮│
                                                          ││    D     ││
                                                          │╰──────────╯│
                                                          ╰────────────╯
