src/diagrams/state/snapshots/figo__diagrams__state__tests__self_loop_fsm_unicode.snap
---
source: src/diagrams/state/mod.rs
expression: out
---
                  ╭────────────╮ ┐
            ●────>│    Idle    │<│
                  ╰────────────╯─┘
