src/diagrams/state/snapshots/figo__diagrams__state__tests__snapshot_composite_state_unicode.snap
---
source: src/diagrams/state/mod.rs
assertion_line: 160
expression: out
---

                           begin                     end
               ───────────────────────────────────────────────────
        ╭────────────╮    ╭────────────────▼───────────────╮    ╭▼╮
  ●────>│    Idle    │    │             Active             │    │◎│
        ╰────────────╯    ├────────────────────────────────┤    ╰─╯
                          │                                │
                          │ ╭────────────╮  ╭────────────╮ │
                          │ │    Sub1    │  │    Sub2    │ │
                          │ ╰────────────╯  ╰────────────╯ │
                          ╰────────────────────────────────╯
