src/diagrams/state/snapshots/figo__diagrams__state__tests__snapshot_history_state_unicode.snap
---
source: src/diagrams/state/mod.rs
assertion_line: 263
expression: out
---

                   pause      resume
               ──────────────────────────
        ╭────────────╮    ╭▼╮    ╭──────▼─────╮
  ●────>│    Idle    │    │H│    │  Running   │
        ╰────────────╯    ╰─╯    ╰────────────╯
