src/diagrams/state/snapshots/figo__diagrams__state__tests__snapshot_nested_composite_unicode.snap
---
source: src/diagrams/state/mod.rs
assertion_line: 228
expression: out
---

                            begin
               ───────────────────────────────
        ╭────────────╮    ╭──────────────────▼─────────────────╮
  ●────>│    Idle    │    │               Active               │
        ╰────────────╯    ├────────────────────────────────────┤
                          │                                    │
                          │ ╭────────────────────────────────╮ │
                          │ │           SubActive            │ │
                          │ ├────────────────────────────────┤ │
                          │ │                                │ │
                          │ │ ╭────────────╮  ╭────────────╮ │ │
                          │ │ │    Sub1    │  │    Sub2    │ │ │
                          │ │ ╰────────────╯  ╰────────────╯ │ │
                          │ ╰────────────────────────────────╯ │
                          ╰────────────────────────────────────╯
