src/diagrams/state/snapshots/figo__diagrams__state__tests__snapshot_overlapping_labels_unicode.snap
---
source: src/diagrams/state/mod.rs
assertion_line: 222
expression: out
---

                                 very_long_label_two

               very_long_label_one                very_long_label_three
               ───────────────────────────────────────────────────────
        ╭────────────╮    ╭──────▼─────╮    ╭──────▼─────╮    ╭──────▼─────╮
  ●────>│     A      │    │     B      │    │     C      │    │     D      │
        ╰────────────╯    ╰────────────╯    ╰────────────╯    ╰────────────╯
