src/diagrams/state/snapshots/figo__diagrams__state__tests__snapshot_self_loop_unicode.snap
---
source: src/diagrams/state/mod.rs
assertion_line: 178
expression: out
---



        ╭────────────╮ ┐
  ●────>│    Idle    │<│
        ╰────────────╯─┘
