src/diagrams/state/snapshots/figo__diagrams__state__tests__snapshot_simple_state_ascii.snap
---
source: src/diagrams/state/mod.rs
assertion_line: 108
expression: out
---

                      start         finish
               -------------------------------
        +------------+    +------v-----+    +v+
  *────>|    Idle    |    |  Running   |    |O|
        +------------+    +------------+    +-+
