src/diagrams/state/snapshots/figo__diagrams__state__tests__snapshot_simple_state_unicode.snap
---
source: src/diagrams/state/mod.rs
assertion_line: 73
expression: out
---

                      start         finish
               ───────────────────────────────
        ╭────────────╮    ╭──────▼─────╮    ╭▼╮
  ●────>│    Idle    │    │  Running   │    │◎│
        ╰────────────╯    ╰────────────╯    ╰─╯
